--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-    "github-actions.workflows.pinned.workflows": [
-        ".github/workflows/backend-ci.yml"
-    ]
+    "github-actions.workflows.pinned.workflows": []
 }
