--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -66,7 +66,7 @@ jobs:
           echo "$HOME/.composer/vendor/bin" >> $GITHUB_PATH
 
       - name: Run PHPCBF to fix coding standard issues
-        run: phpcbf --standard=PSR12 backend/
+        run: phpcbf --standard=PSR12 backend/ || true
 
       - name: Run PHP_CodeSniffer and save results
         id: phpcs
