--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -83,6 +83,8 @@ jobs:
         run: sudo apt-get install gh -y
 
       - name: Authenticate GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
       - name: Post PHP_CodeSniffer results to PR or Commit
@@ -101,9 +103,9 @@ jobs:
       - name: Send alert to Teams if PHP_CodeSniffer fails
         if: env.file-exists == 'true'
         run: |
-          phpcsResults=$(cat phpcs-result.txt)
+          phpcsResults=$(cat phpcs-result.txt | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
           curl -H 'Content-Type: application/json' \
-            -d '{"text": "PHP_CodeSniffer analysis found issues for commit '${{ github.sha }}'. Please check the details:\n\n'${phpcsResults}'"}' \
+            -d "{\"text\": \"PHP_CodeSniffer analysis found issues for commit '${{ github.sha }}'. Please check the details:\n\n${phpcsResults}\"}" \
             ${{ secrets.TEAMS_WEBHOOK_URL }}
 
       - name: Upload test results
