--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -66,73 +66,61 @@ jobs:
           echo "$HOME/.composer/vendor/bin" >> $GITHUB_PATH
 
       - name: Run PHPCBF to fix coding standard issues
-        run: phpcbf --standard=PSR12 backend/ || true
+        run: phpcbf --standard=PSR12 backend/
 
-      - name: Run PHP_CodeSniffer and save results
+      - name: Run PHP_CodeSniffer
         id: phpcs
-        run: |
-          phpcs --standard=PSR12 backend/ | tee phpcs-result.txt
-        continue-on-error: true
+        run: phpcs --standard=PSR12 backend/ || true
 
-      - name: Check if PHP_CodeSniffer results file exists
-        id: check_file
-        run: |
-          if [ -f phpcs-result.txt ]; then echo "file-exists=true" >> $GITHUB_ENV; else echo "file-exists=false" >> $GITHUB_ENV; fi
-
-      - name: Install GitHub CLI
-        run: sudo apt-get install gh -y
-
-      - name: Authenticate GitHub CLI
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh auth login --with-token
-
-      - name: Post PHP_CodeSniffer results to PR or Commit
-        if: env.file-exists == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          phpcsResults=$(cat phpcs-result.txt)
-          body="## PHP_CodeSniffer results:\n\`\`\`\n$phpcsResults\n\`\`\`"
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            gh pr comment ${{ github.event.pull_request.number }} --body "$body"
-          else
-            gh api repos/${{ github.repository }}/commits/${{ github.sha }}/comments --field body="$body"
-          fi
+      - name: Check PHPCS Output
+        if: always()
+        run: echo "PHP_CodeSniffer found issues."
 
       - name: Send alert to Teams if PHP_CodeSniffer fails
-        if: env.file-exists == 'true'
+        if: steps.phpcs.outcome == 'failure'
         run: |
-          phpcsResults=$(cat phpcs-result.txt | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
           curl -H 'Content-Type: application/json' \
-            -d "{\"text\": \"PHP_CodeSniffer analysis found issues for commit '${{ github.sha }}'. Please check the details:\n\n${phpcsResults}\"}" \
+            -d '{"text": "PHP_CodeSniffer analysis failed for commit '${{ github.sha }}'. Please check the details in the pipeline logs."}' \
             ${{ secrets.TEAMS_WEBHOOK_URL }}
 
       - name: Upload test results
         uses: actions/upload-artifact@v2
         with:
           name: test-results
-          path: /var/www/*.xml
+          path: ./*.xml
 
       - name: Post test results to PR or Commit
-        if: always()
+        uses: actions/github-script@v3
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          unitTestResults=""
-          integrationTestResults=""
-          if [ -f /var/www/test-results-unit.xml ]; then
-            unitTestResults=$(cat /var/www/test-results-unit.xml)
-          fi
-          if [ -f /var/www/test-results-integration.xml]; then
-            integrationTestResults=$(cat /var/www/test-results-integration.xml)
-          fi
-          body="## Unit Test Results:\n${unitTestResults}\n\n## Integration Test Results:\n${integrationTestResults}"
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            gh pr comment ${{ github.event.pull_request.number }} --body "$body"
-          else
-            gh api repos/${{ github.repository }}/commits/${{ github.sha }}/comments --field body="$body"
-          fi
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          script: |
+            const fs = require('fs');
+            const unitTestResults = fs.readFileSync('test-results-unit.xml', 'utf8');
+            const integrationTestResults = fs.readFileSync('test-results-integration.xml', 'utf8');
+            const body = `
+            ## Unit Test Results:
+            ${unitTestResults}
+
+            ## Integration Test Results:
+            ${integrationTestResults}
+            `;
+
+            if (context.eventName === 'pull_request') {
+              github.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.pull_request.number,
+                body: body
+              });
+            } else if (context.eventName === 'push') {
+              const commitSha = context.sha;
+              github.repos.createCommitComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                commit_sha: commitSha,
+                body: body
+              });
 
       - name: Clean up Docker containers and network
         if: always()
